Refactoring of the IConnector seems to be working.

--- a/plugins/org.eclipse.reqcycle.repository.ui/src/org/eclipse/reqcycle/repository/ui/messages.properties
+++ b/plugins/org.eclipse.reqcycle.repository.ui/src/org/eclipse/reqcycle/repository/ui/messages.properties
@@ -1,5 +1,6 @@
 ADD_RESOURCE_ICON=icons/new_location.gif
 ADD_RESOURCE_TEXT=Add Location
+EDIT_RESOURCE_TEXT=Edit Location
 DELETE_RESOURCE_ICON=icons/delete.gif
 GREEN_STATUS_ICON=icons/statusGreen.png
 GREY_STATUS_ICON=icons/statusGrey.png
