enable edit mapping on rmf connector

--- a/plugins/org.eclipse.reqcycle.repository.ui/src/org/eclipse/reqcycle/repository/ui/messages.properties
+++ b/plugins/org.eclipse.reqcycle.repository.ui/src/org/eclipse/reqcycle/repository/ui/messages.properties
@@ -1,6 +1,6 @@
 ADD_RESOURCE_ICON=icons/new_location.gif
-ADD_RESOURCE_TEXT=Add Location
-EDIT_RESOURCE_TEXT=Edit Location
+ADD_RESOURCE_TEXT=Add Requirement Source
+EDIT_RESOURCE_TEXT=Edit Requirement Source
 DELETE_RESOURCE_ICON=icons/delete.gif
 GREEN_STATUS_ICON=icons/statusGreen.png
 GREY_STATUS_ICON=icons/statusGrey.png
@@ -11,6 +11,4 @@ SYNC_ERROR_MSG=Error While Synchronizing the Resource
 SYNC_REQ_RESOURCE_TASK_TITLE=Synchronize Requirement Resource
 SYNC_RESOURCE_ICON=icons/synchronize.gif
 SYNC_RESOURCE_TEXT=Synchronize Resource
-UNSYNC_RESOURCE_ICON=icons/unsynchronize.gif
-UNSYNC_RESOURCE_TEXT=Unsynchronize Resource
 YELLOW_STATUS_ICON=icons/statusYellow.png
